--- a/css/main.css
+++ b/css/main.css
@@ -362,6 +362,9 @@
   .our-qualities-list__item {
     height: 226px;
   }
+  .our-qualities-list__heading {
+    text-align: center;
+  }
 }
 
 .grid {
@@ -416,7 +419,7 @@
 
 @media screen and (min-width: 1200px) {
   .our-work-section {
-    display: initial;
+    display: block;
   }
 }
 
@@ -526,6 +529,14 @@
 @media screen and (min-width: 0px) and (max-width: 480px) {
   .our-team-section {
     width: 480px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .our-team-section__heading {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.15;
   }
 }
 
@@ -737,6 +748,14 @@ img {
   .our-clients {
     margin-top: 60px;
     margin-bottom: 60px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .our-clients__heading {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.15;
   }
 }
 
@@ -983,6 +1002,9 @@ img {
     margin-left: 0;
     margin-bottom: 102px;
   }
+  .social-icons-footer__heading {
+    text-align: center;
+  }
 }
 
 .social-icons-footer-list__item {
@@ -1086,6 +1108,7 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .follow-us--position {
     margin-left: 0;
+    align-items: center;
   }
 }
 
@@ -1172,6 +1195,12 @@ img {
     flex-wrap: wrap;
     justify-content: flex-start;
     margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .main-content__list {
+    margin-bottom: 0px;
   }
 }
 
@@ -1472,6 +1501,12 @@ img {
   }
 }
 
+@media screen and (min-width: 0px) and (max-width: 1199.78px) {
+  .modal__heading {
+    text-align: center;
+  }
+}
+
 .mobile-menu-button {
   border: none;
   background: transparent;
@@ -1624,7 +1659,8 @@ img {
 
 @media screen and (min-width: 0px) and (max-width: 767px) {
   .mobile-menu {
-    height: 796px;
+    height: 100vh;
+    overflow: auto;
   }
 }
 /*# sourceMappingURL=main.css.map */
