--- a/saas/components/_follow-us.scss
+++ b/saas/components/_follow-us.scss
@@ -62,6 +62,7 @@
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .follow-us--position {
     margin-left: 0;
+    align-items: center;
   }
 }
 @media screen and (max-width: 479.98px) {
