--- a/saas/components/_main-content__list.scss
+++ b/saas/components/_main-content__list.scss
@@ -60,3 +60,9 @@
     margin-bottom: 40px;
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .main-content__list {
+    margin-bottom: 0px;
+  }
+}
