--- a/saas/components/_modal-window.scss
+++ b/saas/components/_modal-window.scss
@@ -168,3 +168,9 @@
     line-height: 1.1;
   }
 }
+
+@media screen and (min-width: 0px) and (max-width: 1199.78px) {
+  .modal__heading {
+    text-align: center;
+  }
+}
