--- a/saas/components/_our-clients.scss
+++ b/saas/components/_our-clients.scss
@@ -19,3 +19,10 @@
     margin-bottom: 60px;
   }
 }
+@media screen and (max-width: 767.98px) {
+  .our-clients__heading {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.15;
+  }
+}
