--- a/saas/components/_our-team-section.scss
+++ b/saas/components/_our-team-section.scss
@@ -25,3 +25,10 @@
     width: 480px;
   }
 }
+@media screen and (max-width: 767.98px) {
+  .our-team-section__heading {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.15;
+  }
+}
